--- a/src/app/pages.css
+++ b/src/app/pages.css
@@ -1,3 +1,102 @@
-.buttonme  {
-    background-color: rgb(60, 250, 107);
+/* pages.css */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap');
+
+/* Estilos para pantallas grandes (mayores a 768px) */
+@media screen and (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Caveat', cursive;
+    font-size: 1.5em;
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    margin-top: 7%;
+  }
+
+  .profile-image {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-left: 100px;
+  }
+
+  .h1 {
+    font-size: 3em;
+    font-family: 'Dancing Script', cursive;
+  }
+
+  .h2 {
+    margin-top: 5%;
+  }
+  .h3{
+    position: relative;
+    font-size: 2em;
+    margin-right: 60%;
+    bottom: -70px
+  }
+
+  .conteinerT{
+    margin-top: 1.5%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr); /* Create 4 equal-width columns */
+    grid-gap: 15px;
+    margin-left: 120px;
 }
+}
+
+
+
+.dark-icon {
+    filter: invert(40%) sepia(54%) saturate(44%) hue-rotate(180deg);
+  }
+
+/* Estilos para pantallas pequeñas (hasta 767px) */
+@media screen and (max-width: 767px) {
+  .container {
+    font-family: 'Caveat', cursive;
+    font-size: 1em;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+  }
+
+  .profile-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-left: 0;
+    margin-top: 10px;
+  }
+
+  .h1 {
+    font-size: 2em;
+    font-family: 'Dancing Script', cursive;
+  }
+
+  .h2 {
+    text-align: center;
+    margin-top: 3%;
+  }
+
+  .conteinerT{
+    display: grid;
+  grid-template-columns: repeat(4, 1fr); /* Create 4 equal-width columns */
+  grid-gap: 15px;
+}
+}
+
+
+
+.dark-icon {
+    filter: invert(40%) sepia(54%) saturate(44%) hue-rotate(180deg);
+  }
