--- a/src/componentes/Rick-and-Morty/proyect.css
+++ b/src/componentes/Rick-and-Morty/proyect.css
@@ -59,4 +59,28 @@
         font-size: 1.5em; /* Ajusta el tamaño de la fuente según sea necesario */
         text-align: center;
       }
+
+      .title{
+        z-index: 53;
+        position: relative;
+        font-size: 2em;
+        margin-left: 0,2px;
+        margin-top: 60px;
+      }
+
+      .conteinerT1{
+        z-index: 53;
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr); /* Create 4 equal-width columns */
+        grid-gap: 30px;
+        margin-left: 0,2px;
+    }
+
+    .img1 {
+      z-index: 53;
+      width: 450px;
+      height: 300px;
+      margin-top: 40px;
+    }
 }
