--- a/src/componentes/vorttex/vortex.css
+++ b/src/componentes/vorttex/vortex.css
@@ -45,4 +45,19 @@
           position: relative;
           margin-top: 30px; /* Ajusta el margen según sea necesario */
         }
+
+        .title3{
+          z-index: 53;
+          position: relative;
+          font-size: 2em;
+          margin-top: 120px;
+        }
+
+        .text3{
+          margin-top: 30px;
+          overflow-wrap: break-word; /* Permite que las palabras se rompan para ajustarse al ancho del contenedor */
+        word-wrap: break-word; /* Otra propiedad para compatibilidad con navegadores más antiguos */
+        max-width: 500px;
+        }
+      
   }
